--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@fullstory/babel-plugin-annotate-react",
+  "name": "@freshpaint/babel-plugin-annotate-react",
   "version": "2.1.2",
-  "description": "A Babel plugin that annotates React components, making them easier to target with FullStory search",
+  "description": "A Babel plugin that annotates React components, making them easier to target with Freshpaint",
   "main": "index.js",
-  "homepage": "https://github.com/fullstorydev/fullstory-babel-plugin-annotate-react",
+  "homepage": "https://github.com/freshpaint-io/freshpaint-babel-plugin-annotate-react",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fullstory-babel-plugin-annotate-react.git"
+    "url": "git+https://github.com/freshpaint-io/freshpaint-babel-plugin-annotate-react.git"
   },
   "scripts": {
     "test": "jest"
   },
-  "author": "FullStory",
+  "author": "Freshpaint",
   "license": "MIT",
   "jest": {
     "roots": [
